pkg/lang/testdata/ub/constraints/valid/check-required-together.ub
constraints: [
  { kind: required-together, fields: [input.vpc-id, input.subnet-ids] },
]
