pkg/lang/testdata/ub/constraints/invalid/fields-not-ident.ub
constraints: [
  { kind: required-together, fields: ['quoted-name', 42, var.valid-name] },
]
